<resources>
    <string name="app_name">Note App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label"> </string>
    <string name="second_fragment_label"> </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">

    </string>
    <string name="settings_title">Settings</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="todo_next">To do</string>
    <string name="important_text">Important</string>
    <string name="idea_text">Idea</string>
    <string name="description_hint">Description</string>
    <string name="title_hint">Title</string>
    <string name="action_add">add</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>